--- a/mana-movement-maternity.html
+++ b/mana-movement-maternity.html
@@ -40,7 +40,7 @@ who-its-for:
 inside-the-course:
   heading: Inside Mana Movement
   description_html: >-
-    <p>You have the flexibility to incorporate this program into your daily life. You may choose to engage with these modules every day or practice whenever inspiration strikes. The course is structured with 6 core modules and 4 supplementary modules. Each of the initial six modules delves into the intricacies of a segment within the Mana Movement Practice. Module 6 represents the comprehensive Mana Movement practice. The preceding five modules systematically break down each section. By progressing step by step, you can learn and embody these practices. By the time you reach Module 6, you will have already internalized all these movements, enabling a more profound exploration.</p><p>For optimal results, it is recommended to complete each module two to three times before advancing to the next one. This is your opportunity to fully embody these practices, allowing you to perform them effortlessly and immerse yourself in your unique experience. Upon completing the program, the aim is for you to autonomously practice without relying on the videos, as you will have developed a profound familiarity with the movements within your body.</p>
+    <p>You have the flexibility to incorporate this program into your daily life. You may choose to engage with these modules every day or practice whenever inspiration strikes. The course is structured with 3 core modules and 2 supplementary modules.</p><p>For optimal results, it is recommended to complete each module two to three times before advancing to the next one. This is your opportunity to fully embody these practices, allowing you to perform them effortlessly and immerse yourself in your unique experience. Upon completing the program, the aim is for you to autonomously practice without relying on the videos, as you will have developed a profound familiarity with the movements within your body.</p>
   module:
    - title: Pre-Practice
      description_html: >-
@@ -60,6 +60,21 @@ inside-the-course:
        show: false
        hours: 00
        minutes: 00
+   - title: MANA Movement Practice Two
+     description_html: >-
+      <p>Introduction to Practice Two (3:06)</p>
+      <p>Practice Two - Setated Hands & Hands-Knees (21:50)</p>
+   - title: MANA Movement Practice Three
+     description_html: >-
+      <p>Introduction to Practice Three (2:25)</p>
+      <p>Practice Three - Seated, Hands-Knees, & Standing (33:51)</p>
+   - title: Additional Stretching Sequence
+     description_html: >-
+      <p>Stretching Sequence (28:55)</p>
+   - title: BONUS Liberation Through Movement Practice
+     description_html: >-
+      <p>"Painting Space" Introduction</p>
+      <p>"Painting Space" Embodied Dance Practice - Audio Guided</p>
 instructor: 
   featured_image: /uploads/images/manamei-66.jpg
   heading: Hi! I'm Mana Mei
@@ -89,20 +104,20 @@ investment:
 faq: 
   heading: Frequently asked questions
   questions-and-answers: 
-   - question: I have a busy schedule. Can I take my time working through each module?
-     answer_html: <p>YES! Mana Movement Maternity is designed to serve YOU in living in your radiance. Therefore the practices have been designed to give you the freedom of when, and how often you practice. That being said here is the recommendation from Mana Mei.</p>
-   - question: Are there prerequisites to take this program?
-     answer_html: <p>NO. This program is open to any woman who is excited and ready to dive into the movement medicine, regardless of your previous experience. All women can benefit from this program, regardless of your age, physical capacity, dance experience, or location in the world.</p>
-   - question: Will I receive a certificate at the end?
-     answer_html: <p>Wisdom Body is purely a personal deep dive experience so there is no certification at completion. If you are interested in Mana Mei’s Level 1 Leadership and Facilitator Training, check out the Liberation Through Movement Mentorship Program!</p>
+   - question: At what stage of Pregnancy Can I do this course?
+     answer_html: <p>This course has been designed to suit women at ANY stage of pregnancy. Within the course, Mana Mei offers modifications to support your changing body, comfort levels, and energy needs. These practices are also amazing for your post-partum recovery and healing time.</p><p>That being said, it is always recommended to listen to your body and respect what it needs. If you are unsure if any part of the practice is right for you, please consult your birthing professional.</p>
+   - question: Can I do this course even if I am not pregnant or planning to become a mother?
+     answer_html: <p>YES! As women, we are all creative beings. Whether you are birthing a baby, a project, an idea, or any other medium of creation, you can benefit from these practices as they will connect your with your innate creativity and the magic of your womb space.</p>
+   - question: How often can I do these practices, and should I follow a certain order?
+     answer_html: <p>Mana Movement is designed to be done as a daily, or regularly weekly practice. Because it is highly modifiable, you are welcome to practice as often as feels good to you! The most important part is to always listen to your body and what she needs on any given day. I would suggest doing the practice in order first, and then once you have completed all practices, you can choose which one you want to do each day.</p>
    - question: I don’t have a credit card. Is there any other way I can pay?
      answer_html: <p>If you do not have a Credit Card, you can alternatively pay through PayPal. In order to do this, you will need to send the full amount to paypal.me/manamovement and contact Mana through email or Social Media with your name, email, and which program you have purchased.</p>
   background-image: 
     background_image: /uploads/backgrounds/manamei-3.jpg
     image_focus: bottom right
 cta: 
-  heading: Do you TRUST your body?
-  description_html: One of the biggest pains I see in the modern Birth Culture is the way women are disempowered- not feeling in control of their own experience, not feeling safe, and not feeling free.</p><p><strong>Safety & Freedom in your Birth journey starts inside...</strong></p><p><em>Do you TRUST your body?</p><p>Can you LISTEN to the subtle cues of your Body?</p><p>Are you connected to your intuition?</p><p>Do you have the tools to create or shift the energy within your body?</em></p><p>If we are not deeply connected to our own intuition, trust, and knowledge of how to create and shift our experience within our body, then we may be giving our power away, and there is no greater moment in a woman’s life when this could “make or break” an experience than during the BIRTH journey.
+  heading: Do you Trust your Body?
+  description_html: One of the biggest pains I see in the Birth Culture is the way in which women are disempowered by not feeling in control of their experience.</p><p>The way I see it, this starts inside of ourselves.</p><p>Do you TRUST your body?</p><p>Can you LISTEN to the subtle cues of your Body?</p><p>Are you connected to our intuition?</p><p>Do you have the tools to create or shift the energy inside your body?</p><p>If you answered NO to any of these questions, then there is work to be done!</p><p>If we are not deeply connected to our own intuition, trust, and knowledge of how to create and shift our experience within our body, then we may be giving our power away, and there is no greater moment in a woman’s life when this could “make or break” an experience than BIRTH.</p><p>It is time to reclaim your Power! To Create a beautiful Rite of Passage into Motherhood, full of TRUST in your Feminine Wisdom and the magic of your Body.</p>  
   button: 
     text: Enroll now
     url: https://sso.teachable.com/secure/487916/checkout/5720976/mana-movement-maternity
