--- a/mana-movement-maternity.html
+++ b/mana-movement-maternity.html
@@ -3,7 +3,7 @@ layout: default
 slug: maternity
 title: Mana Movement Maternity
 description_html: 
-featured-image: /uploads/images/manamei-14.jpg
+featured-image: /uploads/images/manamei-70.jpg
 heading: 
   title: Mana Movement Maternity
   subtitle: For Women Ready to Rise into Empowered Motherhood
@@ -15,7 +15,7 @@ heading:
     show: false
     text: Watch the video
     url: https://res.cloudinary.com/dnb4ey82d/video/upload/v1701101231/manamei/wisdom-body.mp4
-  background_image: /uploads/images/manamei-14.jpg
+  background_image: /uploads/images/manamei-70.jpg
   overlay_style: medium
 course-description: 
   heading: Discover the essence of Mana Movement Maternity
@@ -34,9 +34,9 @@ who-its-for:
   heading: Mana Movement Maternity is for mamas who desire to
   description_html: <p>Cultivate a deeper level of TRUST in their body﻿</p><p>Increase mobility and fluidity throughout the body, and especially in the spine, pelvis and hips </p><p>Increase Feeling Body Awareness</p><p>Practice sustained meditative presence </p><p>Learn to breathe energy through the body and a way to open the inner channels</p><p>Know how to use non-linear movement to open the body and create unrestricted flow of energy</p><p>Forge a deep and loving connection with their baby </p><p>Prepare themselves for having an Empowered and Pleasurable Birth Experience</p><p class="font-serif text-feature">Mana Movement Maternity is specifically designed for Mamas at every stage of pregnancy</p>
   background-image: 
-    background_image: /uploads/images/manamei-17.jpg
+    background_image: /uploads/images/manamei-68.jpg
     image_focus: center
-    overlay_style: medium
+    overlay_style: dark
 inside-the-course:
   heading: Inside Mana Movement
   description_html: >-
@@ -100,7 +100,8 @@ investment:
     url: https://sso.teachable.com/secure/487916/checkout/5720976/mana-movement-maternity
     text: Enroll Now
   border: 
-  background_image: 
+  background_image: /uploads/images/manamei-67.jpeg
+  overlay_style: dark
 faq: 
   heading: Frequently asked questions
   questions-and-answers: 
@@ -113,8 +114,8 @@ faq:
    - question: I don’t have a credit card. Is there any other way I can pay?
      answer_html: <p>If you do not have a Credit Card, you can alternatively pay through PayPal. In order to do this, you will need to send the full amount to paypal.me/manamovement and contact Mana through email or Social Media with your name, email, and which program you have purchased.</p>
   background-image: 
-    background_image: /uploads/backgrounds/manamei-3.jpg
-    image_focus: bottom right
+    background_image: 
+    image_focus: 
 cta: 
   heading: Do you Trust your Body?
   description_html: One of the biggest pains I see in the Birth Culture is the way in which women are disempowered by not feeling in control of their experience.</p><p>The way I see it, this starts inside of ourselves.</p><p>Do you TRUST your body?</p><p>Can you LISTEN to the subtle cues of your Body?</p><p>Are you connected to our intuition?</p><p>Do you have the tools to create or shift the energy inside your body?</p><p>If you answered NO to any of these questions, then there is work to be done!</p><p>If we are not deeply connected to our own intuition, trust, and knowledge of how to create and shift our experience within our body, then we may be giving our power away, and there is no greater moment in a woman’s life when this could “make or break” an experience than BIRTH.</p><p>It is time to reclaim your Power! To Create a beautiful Rite of Passage into Motherhood, full of TRUST in your Feminine Wisdom and the magic of your Body.</p>  
@@ -122,7 +123,7 @@ cta:
     text: Enroll now
     url: https://sso.teachable.com/secure/487916/checkout/5720976/mana-movement-maternity
   background-image: 
-    background_image: /uploads/images/manamei-22.jpg
+    background_image: /uploads/images/manamei-69.jpg
     background-position: center
     overlay_style: medium
 seo: 
@@ -164,7 +165,7 @@ seo:
 
 
 <!-- Meet Your Teacher -->
-<section class="grid md:grid-cols-3 p-10p">
+<section class="grid md:grid-cols-3 p-10p border-t border-feature">
   <div class="bg-image-style mr-20p" style="background-image: url('{{page.instructor.featured_image}}')"></div>
   <div class="md:col-span-2">
       <h2 class="text-md-serif text-feature capitalize">{{page.instructor.heading}}</h2>
