ready for review

--- a/mana-movement-maternity.html
+++ b/mana-movement-maternity.html
@@ -2,7 +2,7 @@
 layout: default
 slug: maternity
 title: Mana Movement Maternity
-description_html: 
+description_html: Mana Movement Maternity is a holistic prenatal movement program designed to help women connect with their bodies during pregnancy. The course emphasizes trust in the body, emotional awareness, and feminine pathways of movement through non-linear practices. It aims to improve mobility, strength, and mindfulness while fostering a deeper bond with the baby. Led by Mana Mei, a leader in feminine embodiment, the program prepares participants for an empowered and joyful birth experience. Suitable for all stages of pregnancy
 featured-image: /uploads/images/manamei-70.jpg
 heading: 
   title: Mana Movement Maternity
@@ -127,11 +127,10 @@ cta:
     background-position: center
     overlay_style: medium
 seo: 
-  title: Wisdom Body - An Online Embodied Movement & Somatic Dance Program
-  description: Embrace your Wisdom Body with Mana Mei's online immersion. Reconnect with your innate feminine power through embodied movement and somatic dance. Rediscover your inner strength, creativity, and authentic self in a supportive community.
-  keywords: Wisdom Body, embodied movement, somatic dance, feminine power, transformative practices, online program, inner strength, creativity, authentic self
-  social_image: /uploads/images/manamei-14.jpg
-  hide-from-google: false
+  title: Mana Movement Maternity
+  description: Mana Movement Maternity is a holistic prenatal movement program designed to help women connect with their bodies during pregnancy. The course emphasizes trust in the body, emotional awareness, and feminine pathways of movement through non-linear practices. It aims to improve mobility, strength, and mindfulness while fostering a deeper bond with the baby. Led by Mana Mei, a leader in feminine embodiment, the program prepares participants for an empowered and joyful birth experience. Suitable for all stages of pregnancy
+  social_image: /uploads/images/manamei-70.jpg
+  hide-from-google: true
 ---
 
 <!-- Course Heading -->
