--- a/mana-movement-maternity.html
+++ b/mana-movement-maternity.html
@@ -35,12 +35,15 @@ who-its-for:
   description_html: <p>Cultivate a deeper level of TRUST in their body﻿</p><p>Increase mobility and fluidity throughout the body, and especially in the spine, pelvis and hips </p><p>Increase Feeling Body Awareness</p><p>Practice sustained meditative presence </p><p>Learn to breathe energy through the body and a way to open the inner channels</p><p>Know how to use non-linear movement to open the body and create unrestricted flow of energy</p><p>Forge a deep and loving connection with their baby </p><p>Prepare themselves for having an Empowered and Pleasurable Birth Experience</p><p class="font-serif text-feature">Mana Movement Maternity is specifically designed for Mamas at every stage of pregnancy</p>
   background-image: 
     background_image: /uploads/images/manamei-68.jpg
-    image_focus: center
+    image_focus: 65% 85%
     overlay_style: dark
 inside-the-course:
-  heading: Inside Mana Movement
+  heading: Inside Mana Maternity
   description_html: >-
-    <p>You have the flexibility to incorporate this program into your daily life. You may choose to engage with these modules every day or practice whenever inspiration strikes. The course is structured with 3 core modules and 2 supplementary modules.</p><p>For optimal results, it is recommended to complete each module two to three times before advancing to the next one. This is your opportunity to fully embody these practices, allowing you to perform them effortlessly and immerse yourself in your unique experience. Upon completing the program, the aim is for you to autonomously practice without relying on the videos, as you will have developed a profound familiarity with the movements within your body.</p>
+    <p>You can begin incorporating these practices into your daily flow at any point in your pregnancy journey, as well as during your postpartum healing, and beyond! Mana Movement will support you at every stage of your life!</p>
+    <p>Within this course you will find 3 core Mana Movement Practice, each inviting you to explore non-linear movements in different body positions to support increased fluidity and deepen body awareness. There are also 2 supplementary practices- a stretching practice that is recommended for before your Mana Practice, and a bonus Liberation Through Movement Guided Embodiment Meditation to further activate your creativity and open your body to even more magic!</p>
+    <p>It is recommended to first complete the program in the order that it is offered, then once you have experienced all practices, give yourself permission to choose which practice will best serve you day-to-day.</p>
+    <p>Listen to your body, allow her to guide you, and use this time to dive deep into your self-devotion, reconnecting with the power and magic of the Feminine Body.</p>
   module:
    - title: Pre-Practice
      description_html: >-
@@ -76,7 +79,7 @@ inside-the-course:
       <p>"Painting Space" Introduction</p>
       <p>"Painting Space" Embodied Dance Practice - Audio Guided</p>
 instructor: 
-  featured_image: /uploads/images/manamei-66.jpg
+  featured_image: /uploads/images/manamei-71.jpg
   heading: Hi! I'm Mana Mei
   description_html: I am a professional dancer, performer, and International Leader in the Art of Feminine Embodiment. And above all else,</p><p><strong>I am mother.</strong></p><p>  Taking the Rite of Passage into motherhood was the most incredible, confronting, and transformational experience of my life. I am forever grateful to claim the Archetype of the Mother and witness how it continues to inspire everything I do.</p><p>  I am passionate about helping other women claim their Feminine Power through the language of dance. This is why I have created Liberation Through Movement - a lifestyle and personal transformation business that realigns women with their power to step forward as the ultimate creators of their lives through the modality of embodied dance and intentional movement.</p><p>  Through my life-long studies of classical dance techniques and over 10 years of exploring non-traditional movement techniques, I have discovered the immense healing power of movement and am passionate about sharing this wisdom with women all over the world.</p><p>I believe that our bodies are vessels built to explore all of the complexities of the human experience, and by becoming deeply embodied, we can cultivate unwavering inner safety and freedom, and engage in the world from this place, allows us to live in authentic liberation. 
 investment: 
@@ -165,7 +168,7 @@ seo:
 
 <!-- Meet Your Teacher -->
 <section class="grid md:grid-cols-3 p-10p border-t border-feature">
-  <div class="bg-image-style mr-20p" style="background-image: url('{{page.instructor.featured_image}}')"></div>
+  <div class="bg-image-style mr-20p min-h-[60vh]" style="background-image: url('{{page.instructor.featured_image}}')"></div>
   <div class="md:col-span-2">
       <h2 class="text-md-serif text-feature capitalize">{{page.instructor.heading}}</h2>
       <p>{{page.instructor.description_html}}</p>
