--- a/mana-movement-maternity.html
+++ b/mana-movement-maternity.html
@@ -16,6 +16,7 @@ heading:
     text: Watch the video
     url: https://res.cloudinary.com/dnb4ey82d/video/upload/v1701101231/manamei/wisdom-body.mp4
   background_image: /uploads/images/manamei-70.jpg
+  image_focus: 65% 50%
   overlay_style: medium
 course-description: 
   heading: Discover the essence of Mana Movement Maternity
@@ -87,10 +88,13 @@ investment:
   includes: 
     heading: What's included
     list: 
-     - list-item: 5 guided audio and video practices
-     - list-item: Written theory and journaling prompts
-     - list-item: Lifetime access to program materials
-     - list-item: 2-months free membership to the Liberation Through Movement online community
+     - list-item: 3 Full Mana Movement Practices
+     - list-item: 1 Guided Stretching Practice
+     - list-item: BONUS Liberation Through Movement Embodiment Meditation
+     - list-item: Introducation Document
+     - list-item: Modifications for all Bodies video
+     - list-item: Lifetime Access to all Content
+     - list-item: 2 Months Free Access to Liberation Through Movement Membership Community
   pricing:
     pay-in-full:
       heading: Pay in full
@@ -119,6 +123,16 @@ faq:
   background-image: 
     background_image: 
     image_focus: 
+testimonials: 
+  border: border-y border-feature
+  overlay_style: 
+  background_image: 
+  testimonials: 
+   - testimonial: I love it!! I've been searching for this movement my whole life.
+   - testimonial: I love the combination of movement, breathwork and meditation. Just what I was looking for without knowing I needed it!
+   - testimonial: I’m getting to know myself better with every morning MANA practice. I’m becoming more confident and believe in myself. I'm showing myself to the world in a more authentic way.
+   - testimonial: I have only just begun this practice, but I feel it is opening up something healing and powerful.
+   - testimonial: This practice is truly amazing. The way I feel my body, the way I connect to it, the way I connect to my emotions and let them be.
 cta: 
   heading: Do you Trust your Body?
   description_html: One of the biggest pains I see in the Birth Culture is the way in which women are disempowered by not feeling in control of their experience.</p><p>The way I see it, this starts inside of ourselves.</p><p>Do you TRUST your body?</p><p>Can you LISTEN to the subtle cues of your Body?</p><p>Are you connected to our intuition?</p><p>Do you have the tools to create or shift the energy inside your body?</p><p>If you answered NO to any of these questions, then there is work to be done!</p><p>If we are not deeply connected to our own intuition, trust, and knowledge of how to create and shift our experience within our body, then we may be giving our power away, and there is no greater moment in a woman’s life when this could “make or break” an experience than BIRTH.</p><p>It is time to reclaim your Power! To Create a beautiful Rite of Passage into Motherhood, full of TRUST in your Feminine Wisdom and the magic of your Body.</p>  
@@ -180,6 +194,9 @@ seo:
 
 <!-- FAQ -->
 {% include faq.html %}
+
+<!-- Testimonials -->
+ {% include testimonials.html %}
 
 <!-- CTA -->
 {% include cta-course.html %}
