--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -34,7 +34,7 @@ course-description:
     overlay_style: medium
 benefits:
   heading: All of the tools within this model are designed to do the following
-  description_html: <ul><li>Cultivate Awareness & Freedom in your Physical Body.</li><li>Teach you to source power from your Energy Body.</li><li>Give you tools to maintain peace amidst the challenges of life.</li><li>Awaken the courage & strength to meet the world in authentic expression of your unique self.</li><li>Rise into leadership & begin creating the satisfying, pleasure-filled life you desire.</li></ul>
+  description_html: <ul class="ml-4"><li>Cultivate Awareness & Freedom in your Physical Body.</li><li>Teach you to source power from your Energy Body.</li><li>Give you tools to maintain peace amidst the challenges of life.</li><li>Awaken the courage & strength to meet the world in authentic expression of your unique self.</li><li>Rise into leadership & begin creating the satisfying, pleasure-filled life you desire.</li></ul>
   background-image: 
     background_image: 
     image_focus: 
