--- a/mana-movement-maternity.html
+++ b/mana-movement-maternity.html
@@ -128,9 +128,9 @@ testimonials:
   overlay_style: 
   background_image: 
   testimonials: 
+   - testimonial: I’m getting to know myself better with every morning MANA practice. I’m becoming more confident and believe in myself. I'm showing myself to the world in a more authentic way.
    - testimonial: I love it!! I've been searching for this movement my whole life.
    - testimonial: I love the combination of movement, breathwork and meditation. Just what I was looking for without knowing I needed it!
-   - testimonial: I’m getting to know myself better with every morning MANA practice. I’m becoming more confident and believe in myself. I'm showing myself to the world in a more authentic way.
    - testimonial: I have only just begun this practice, but I feel it is opening up something healing and powerful.
    - testimonial: This practice is truly amazing. The way I feel my body, the way I connect to it, the way I connect to my emotions and let them be.
 cta: 
@@ -141,7 +141,7 @@ cta:
     url: https://sso.teachable.com/secure/487916/checkout/5720976/mana-movement-maternity
   background-image: 
     background_image: /uploads/images/manamei-69.jpg
-    background-position: center
+    image_focus: 60% 50%
     overlay_style: medium
 seo: 
   title: Mana Movement Maternity
@@ -182,7 +182,7 @@ seo:
 
 <!-- Meet Your Teacher -->
 <section class="grid md:grid-cols-3 p-10p border-t border-feature">
-  <div class="bg-image-style mr-20p min-h-[60vh]" style="background-image: url('{{page.instructor.featured_image}}')"></div>
+  <div class="bg-image-style lg:mr-20p min-h-[60vh] mb-8 md:mb-0" style="background-image: url('{{page.instructor.featured_image}}')"></div>
   <div class="md:col-span-2">
       <h2 class="text-md-serif text-feature capitalize">{{page.instructor.heading}}</h2>
       <p>{{page.instructor.description_html}}</p>
