--- a/offerings.html
+++ b/offerings.html
@@ -34,6 +34,10 @@ additional-offerings:
      type: Membership Community
      description: Connect with like-minded embodied women all over the world in shared experience through monthly live online embodiment workshops and masterclasses. Receive unlimited access to the full Workshop Library of all past events. Feel seen and supported in your journey back home to yourself.
      url: /liberation-through-movement.html
+   - title: Mana Movement Maternity
+     type: Online Program
+     description: This course offers a powerful opportunity for pregnant women to reconnect with their bodies, intuition, and feminine energy in a nurturing and intentional way. Through mindful practices, it helps set the foundation for a transformative and empowering experience, where participants feel fully in their power, deeply attuned to their intuition, and open to receiving the joys of pregnancy and birth.
+     url: /mana-movement-maternity.html
 cta: 
   type: masterclass-reply
   heading_html: Liberation Through Movement<br>
