--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -243,13 +243,13 @@ seo:
 </section>
 
 <!-- What You'll Experience -->
-<section class="p-10p">
+<section>
 
   <!-- First Row -->
-  <div class="grid grid-cols-2 gap-[10%]">
+  <div class="grid grid-cols-2">
 
     <!-- Left Column (text) -->
-    <div>
+    <div class="p-10p">
       <h2 class="uppercase text-feature mb-4">Deepen your embodiment knowledge</h2>
       <p class="mb-0">The 3 Pillars of Connection (the Foundation of the Liberation Through Movement Modality)</p>
       <ul class="list">
@@ -270,8 +270,37 @@ seo:
     </div>
 
     <!-- Right Column (image) -->
-     <div class="bg-image-style" style="background-image: url('/uploads/images/manamei-27.jpg');"></div>
+     <div class="bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-27.jpg');"></div>
   </div>
+
+  <!-- Second Row -->
+   <div class="grid grid-cols-2">
+
+    <!-- Left Column (image) -->
+    <div class="bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-27.jpg');"></div>
+
+   <!-- Right Column (text) -->
+    <div class="p-10p">
+      <h2 class="uppercase text-feature">Gain invaluable embodiment tools</h2>
+      <p class="mb-4">(to use for the resot of your life!)</p>
+      <p class="mb-0">Tools for Self-Regulating the Nervous System</p>
+      <ul class="list">
+        <li>Grounding and Interoception</li>
+        <li>Kinesthetic Awareness</li>
+      </ul>
+      <p class="mt-8 mb-0">Emotional Alchemy & Energy Transmutation</p>
+      <ul class="list">
+        <li>Somatic Release & Channel Clearing</li>
+        <li>Shadow Sourcing</li>
+        <li>Pleasure Activation</li>
+      </ul>
+      <p class="mt-8 mb-0">Accessing Your Authentic Expression</p>
+      <ul class="list">
+        <li>Finding Your Unique Dance</li>
+        <li>Expanding Your Movement Vocabulary</li>
+        <li>Manifestation Through Intentional Embodiment</li>
+      </ul>
+    </div>
 </section>
 
 <!-- Inside the Course -->
